# open_cv

./: CMakeLists.txt  README.txt  package.xml  spec.batch
include/: Color.hpp  Filter.hpp  Programhandler.hpp  Shape.hpp
src/: Color.cpp  Filter.cpp  Main.cpp  Programhandler.cpp  Shape.cpp
